<resources>
    <string name="app_name">MQTT GPS Tracker</string>
    <string name="hello_connect">Connect</string>
    <string name="title_settings">Settings</string>
    <string name="title_messages">Messages</string>

    <!-- Fragment -->
    <string name="hello_home">Welcome to MQTT GPS Tracker</string>
    <string name="hello_connect_fragment">Hello Connect fragment</string>
    <string name="hello_settings_fragment">MQTT Server Details</string>
    <string name="hello_messages_fragment">Hello Messages fragment</string>

    <!-- Settings -->
    <string name="server">Server</string>
    <string name="port">Port</string>
    <string name="uname">User Name</string>
    <string name="pass">Password</string>
    <string name="connect">Connect</string>
    <string name="topic">Topic</string>

    <!-- Hints -->
    <string name="serverURIHint">example.example.com</string>
    <string name="portHint">1883</string>
    <string name="topicHint">Home</string>
    <string name="unameHint">User Name</string>
    <string name="passwordHint">Password</string>

    <!-- Button -->
    <string name="save">Save</string>

    <!-- Messages -->
    <string name="missingDetails">Enter Missing Details!</string>
    <string name="dataSaved">Data Saved!</string>
    <string name="welcome">Welcome</string>

</resources>

