<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.prafulla.mqttgpstracker.SettingsFragment">

    <RelativeLayout
        android:id="@+id/mainPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/titleGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/settingsHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/hello_settings_fragment"
                android:textAlignment="center"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/serverGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleGroup"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/serverTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="45dip"
                android:text="@string/server" />

            <AutoCompleteTextView
                android:id="@+id/serverURI"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.22"
                android:ems="10"
                android:hint="@string/serverURIHint"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/portGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/serverGroup"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/portTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="60dip"
                android:text="@string/port" />

            <EditText
                android:id="@+id/port"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.22"
                android:ems="10"
                android:hint="@string/portHint"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/usernameGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/portGroup"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/unameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dip"
                android:text="@string/uname" />

            <EditText
                android:id="@+id/uname"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_weight="0.22"
                android:hint="@string/unameHint"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/passwordGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/usernameGroup"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dip"
                android:text="@string/pass" />

            <EditText
                android:id="@+id/password"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.22"
                android:ems="10"
                android:hint="@string/passwordHint"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/topicGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordGroup"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/topicTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dip"
                android:text="@string/topic" />

            <EditText
                android:id="@+id/topic"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_weight="0.22"
                android:hint="@string/topicHint"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/saveGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/topicGroup">

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:text="@string/save"
                android:onClick="saveSettings"/>
        </LinearLayout>

    </RelativeLayout>
</FrameLayout>
